linux (5.3.7-2) UNRELEASED; urgency=medium

  * debian/bin/gencontrol_signed.py: Fix code style error
  * debian/bin/gencontrol.py: Skip linux-perf lintian-overrides if we won't
    build it
  * debian/bin/gencontrol{,_signed}.py: Use vars parameter instead of self.vars

 -- Ben Hutchings <ben@decadent.org.uk>  Wed, 23 Oct 2019 18:32:15 +0100

linux (5.3.7-1) unstable; urgency=medium

  * New upstream stable update:
    https://www.kernel.org/pub/linux/kernel/v5.x/ChangeLog-5.3.3
    https://www.kernel.org/pub/linux/kernel/v5.x/ChangeLog-5.3.4
    - mISDN: enforce CAP_NET_RAW for raw sockets (CVE-2019-17055)
    - appletalk: enforce CAP_NET_RAW for raw sockets (CVE-2019-17054)
    - ax25: enforce CAP_NET_RAW for raw sockets (CVE-2019-17052)
    - ieee802154: enforce CAP_NET_RAW for raw sockets (CVE-2019-17053)
    - nfc: enforce CAP_NET_RAW for raw sockets (CVE-2019-17056)
    https://www.kernel.org/pub/linux/kernel/v5.x/ChangeLog-5.3.5
    https://www.kernel.org/pub/linux/kernel/v5.x/ChangeLog-5.3.6
    - nl80211: validate beacon head (CVE-2019-16746)
    https://www.kernel.org/pub/linux/kernel/v5.x/ChangeLog-5.3.7

  [ Aurelien Jarno ]
  * [riscv64] Enable SOC_SIFIVE. Do not select CLK_SIFIVE,
    CLK_SIFIVE_FU540_PRCI, SIFIVE_PLIC, SERIAL_SIFIVE and
    SERIAL_SIFIVE_CONSOLE as they are selected by SOC_SIFIVE.
  * [riscv64] Install DTBS using dtbs_install target.
  * [riscv64] Enable SPI_SIFIVE.
  * [riscv64] Enable SERIAL_EARLYCON_RISCV_SBI.
  * [riscv64] Enable MMC, MMC_SPI.
  * [riscv64] udeb: Add mmc-core-modules and mmc-modules.
  * [riscv64] Fix memblock reservation for device tree blob.
  * [riscv64] Clear load reservations while restoring hart contexts.

  [ Ben Hutchings ]
  * [mips*] Revert "Only define MAX_PHYSMEM_BITS on Loongson-3"
  * KEYS: Re-enable SECONDARY_TRUSTED_KEYRING, dropped in 5.2.6-1 by
    mis-merge (Closes: #935945)

  [ John Paul Adrian Glaubitz ]
  * [m68k] Enable CONFIG_CRYPTO_MANAGER_DISABLE_TESTS