@@ -221,7 +221,7 @@ class Gencontrol(Base):
             self._substitute_file(
                 "image.meta.bug-presubj", vars,
                 self.template_debian_dir
-                + "/linux-image%s.bug-presubj" % vars['localversion'])
+                + "/linux-image%(localversion)s.bug-presubj" % vars)
 
         merge_packages(packages, packages_own, arch)
         makefile.add('binary-arch_%s_%s_%s_real' % (arch, featureset, flavour),
