@@ -4,6 +4,7 @@ linux (5.3.7-2) UNRELEASED; urgency=medium
   * debian/bin/gencontrol.py: Skip linux-perf lintian-overrides if we won't
     build it
   * debian/bin/gencontrol{,_signed}.py: Use vars parameter instead of self.vars
+  * debian/bin/gencontrol{,_signed}.py: Use %(name)s to format template vars
 
  -- Ben Hutchings <ben@decadent.org.uk>  Wed, 23 Oct 2019 18:32:15 +0100
 
